--- a/UnitTestProject1/app.config
+++ b/UnitTestProject1/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="UnitTestProject1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +13,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <UnitTestProject1.Properties.Settings>
+      <setting name="ImeetPage" serializeAs="String">
+        <value>http://goo.gl/aSY89E</value>
+      </setting>
+      <setting name="PresentationPage" serializeAs="String">
+        <value>http://sales.imeet.com</value>
+      </setting>
+    </UnitTestProject1.Properties.Settings>
+  </applicationSettings>
 </configuration>
